# beseda

./: CMakeLists.txt  NEWS  README.md  notes.txt
docs/: index.html
src/: bookmarks.cpp  bookmarks.h  filelist.cpp  filelist.h  fio.cpp  fio.h  main.cpp  pairfile.cpp  pairfile.h  speech.cpp  speech.h  textbuffer.cpp  textbuffer.h  utl.cpp  utl.h
